<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="695dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="63dp"
        android:text="@string/lbl_texte"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="139dp"
        android:text="@string/lbl_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/email"
        android:layout_width="227dp"
        android:layout_height="65dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/mdp"
        android:layout_width="228dp"
        android:layout_height="69dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/connecter"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="128dp"
        android:text="@string/btn_connecter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdp" />

    <Button
        android:id="@+id/annuler"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="148dp"
        android:text="@string/btn_annuler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connecter" />


</androidx.constraintlayout.widget.ConstraintLayout>