<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenurepasActivity">

    <!-- Guideline correctement définie à 50% de l'écran -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="31dp"
        android:padding="16dp"
        android:text="@string/bienvenue_sur_menurepasactivity"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/liste_repas"
        android:layout_width="141dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="30dp"
        android:text="@string/mes_participations"
        app:layout_constraintEnd_toStartOf="@+id/repas_avenir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/repas_avenir"
        android:layout_width="125dp"
        android:layout_height="92dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="50dp"
        android:text="@string/les_repas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/liste_repas"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>


